# libsegm

./: .gitignore  CMakeLists.txt  Enclosure.cpp  ImageNode.h  PageSegmenter.cpp  PageSegmenter.h  Readme.md  Reflow.cpp  Reflow.h  Xycut.h  algorithm.aux  algorithm.tex  backup.py  common.h  djvu-lib.cpp  djvu-lib.h  main.cpp  pdf-lib.cpp  pdf-lib.h  pyproject.toml  requirements.txt  segm.c  segmentation.py  setup.py  setup1.py  test.py  testing.py
.github/workflows/: python-app.yml
_skbuild/macosx-10.15-x86_64-3.9/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/macosx-10.15-x86_64-3.9/cmake-build/CMakeTmp/link_flags/gnu_ld_ignore/MODULE/SHARED/src/: CMakeLists.txt
_skbuild/macosx-10.15-x86_64-3.9/cmake-build/CMakeTmp/link_flags/osx_dynamic_lookup/MODULE/SHARED/src/: CMakeLists.txt
_skbuild/macosx-10.15-x86_64-3.9/cmake-install/segm/: __init__.py
documentation/: algorithm.aux  algorithm.tex
python_cpp_extension/: CMakeLists.txt  segm.cpp
scripts/: cluster.py  cluster1.py  show_clusters.py  show_rects.py  ttt.py
segm/: Enclosure.cpp  Enclosure.h  ImageNode.cpp  ImageNode.h  IntervalJoin.cpp  IntervalJoin.h  LineSpacing.cpp  LineSpacing.h  PageSegmenter.cpp  PageSegmenter.h  RectJoin.cpp  RectJoin.h  Reflow.cpp  Reflow.h  Xycut.cpp  Xycut.h  __init__.py  common.cpp  common.h  fastcluster_dm.cpp  segm.cpp  segmentation.cpp  segmentation.h
segm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: CMakeLists.txt  Enclosure.h  ImageNode.cpp  LineSpacing.h  Xycut.cpp
tests/: test.py
